# djangoProject

./: pyproject.toml  pytest.ini
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
djangoProject/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retrive_test.py
vacancies/: models.py  permissions.py  serealizers.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_min_experience.py  0003_vacancy_updated_at.py  0004_alter_vacancy_options.py  0005_alter_vacancy_options.py
vacancies/urls/: skills_urls.py  vacancies_urls.py
